# rust_fullstack

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
backend/: Cargo.toml  Makefile  README.md
backend/api/: .env  Cargo.toml
backend/api/docker/postgres_only/: docker-compose.yaml
backend/api/migrations/: 0001_books_table.sql
backend/api/migrations/bookstore/: 0001_books_table.sql
backend/api/src/: command_line.rs  db.rs  lib.rs  main.rs
backend/api/src/graphql/: schema.rs
backend/api/src/graphql/mutation/: mod.rs  user.rs
backend/api/src/graphql/query/: mod.rs  user.rs
backend/api/src/models/: bookstore.rs  mod.rs
backend/docker/postgres_only/: docker-compose.yaml
backend/docker/postgres_with_jaeger/: docker-compose.yaml
backend/docs/: how_to_define_entity.md  how_to_layout_seaorm_project.md  how_to_model_relation.md  how_to_test_service.md  learn_sqlx.md  notes_about_rust.md
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  user.rs
backend/entity/src/acstor/: key_feature.rs  milestone.rs  milestone_keyfeature.rs  mod.rs  prelude.rs  storage_type.rs  storage_type_keyfeature.rs  workload.rs  workload_keyfeature.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240612_072520_acstor_milestone_table.rs  m20240612_072840_acstor_key_feature_table.rs  m20240612_073251_acstor_add_milestone_key_feature_table.rs  m20240612_075342_acstor_storage_type_table.rs  m20240612_075543_acstor_add_storage_type_key_feature_table.rs  m20240612_080823_acstor_workload_table.rs  m20240612_082213_add_acstor_workload_key_feature_table.rs
backend/postgres_scripts_for_sqlx/2024-06-05-055541_bookstore_init/: down.sql  up.sql
backend/service/: Cargo.toml
backend/service/src/: mutation.rs  query.rs
backend/service/tests/: acstor.rs  prepare_acstor.rs  prepare_user.rs  user.rs
backend/src/: lib.rs
backend/tracer/: Cargo.toml  README.md
backend/tracer/src/: lib.rs
backend/tracer/src/observability/: metrics.rs
frontend/: Cargo.toml  Dioxus.toml  README.md
frontend/.cargo/: config.toml
frontend/src/: commons.rs  main.rs  routes.rs
frontend/src/components/: blog.rs  mod.rs  navbar.rs
frontend/src/components/demos/: async_with_coroutines.rs  async_with_resource.rs  async_with_spawn.rs  context.rs  dynamic_rendering.rs  event_handler.rs  hooks.rs  llm.rs  mod.rs  prop.rs  rsx_basic.rs  user_input.rs
frontend/src/components/form/: form_button_lg.rs  form_input_lg.rs  mod.rs
frontend/src/pages/: mod.rs  sign_out.rs  sign_up.rs
