[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
chrono = "0.4.38"
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-free-icons = { version = "0.8.0", features = [
  "font-awesome-brands",
  "bootstrap",
] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = { version = "^0.3" }
gloo-timers = { version = "0.3", features = ["futures"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
