[package]
name = "dioxus-frontend"
version = "0.1.0"
authors = ["zhaowei <zhaowei@microsoft.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
chrono = "0.4.38"
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-free-icons = { version = "0.8.0", features = [
  "font-awesome-brands",
  "bootstrap",
] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = { version = "^0.3" }
gloo-timers = { version = "0.3", features = ["futures"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
