[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1" }
tracer = { path = "../tracer" }
lazy_static = { version = "1.4.0" }
axum = "0.7"
axum-server = { version = "0.7" }
tokio = { version = "1.32.0", features = ["full"] }
futures = { version = "0.3" }
