[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
serde_json = "1.0"
serde = { version = "1" }
tracer = { path = "../tracer" }
lazy_static = { version = "1.4.0" }
axum = "0.7"
axum-server = { version = "0.7" }
tokio = { version = "1.32.0", features = ["full"] }
futures = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
sqlx-cli = { version = "*" }
