[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
] }
async-graphql = "6.0.6"
serde_json = "1.0"
serde = { version = "1" }


# [dependencies.async-graphql]
# version = "6.0.6"
