[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.21.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "std",
] }
axum = "0.6.20"
